src/oqd_core/frontend/analog/AnalogParser.py
# Generated from AnalogParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AnalogParser ( Parser ):

    grammarFileName = "AnalogParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'evolve'", "'measure'", "'initialize'", 
                     "'if'", "'else'", "'while'", "'with'", "'for'", "'break'", 
                     "'continue'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "'qreg'", "'qmode'", 
                     "':'", "';'", "','", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'*'", "'/'", "'+'", "'-'", "'^'", "'='", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'@'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'abs'", "'sin'", "'cos'", "'tan'", "'exp'", "'log'", 
                     "'sinh'", "'cosh'", "'tanh'", "'atan'", "'acos'", "'asin'", 
                     "'atanh'", "'asinh'", "'acosh'", "'heaviside'", "'conj'", 
                     "'real'", "'imag'", "'atan2'", "'round'", "'range'", 
                     "'print'", "'len'", "'flatten'", "'%I'", "'%X'", "'%Y'", 
                     "'%Z'", "'%C'", "'%A'", "'%J'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "EOL", "NEWLINE", "COMMENT", 
                      "EVOLVE", "MEASURE", "INITIALIZE", "IF", "ELSE", "WHILE", 
                      "WITH", "FOR", "BREAK", "CONTINUE", "AND", "OR", "XOR", 
                      "NOT", "TRUE", "FALSE", "QUANTUMREGISTER", "MODEREGISTER", 
                      "COLON", "SEMICOLON", "COMMA", "LBRACKET", "RBRACKET", 
                      "SQUARELBRACKET", "SQUARERBRACKET", "LBRACE", "RBRACE", 
                      "MULT", "DIV", "PLUS", "MINUS", "POWER", "ASSIGN", 
                      "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", "AT", "INT", 
                      "FLOAT", "MATH_VAR", "REAL_PART", "IMAG_PART", "ABS", 
                      "SIN", "COS", "TAN", "EXP", "LOG", "SINH", "COSH", 
                      "TANH", "ATAN", "ACOS", "ASIN", "ATANH", "ASINH", 
                      "ACOSH", "HEAVISIDE", "CONJ", "REAL", "IMAG_FN", "ATAN2", 
                      "ROUND", "RANGE", "PRINT", "LENGTH", "FLATTEN", "PAULI_I", 
                      "PAULI_X", "PAULI_Y", "PAULI_Z", "CREATION", "ANNIHILATION", 
                      "IDENTITY_OP", "ID" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_ifelse_stmt = 3
    RULE_while_stmt = 4
    RULE_break_stmt = 5
    RULE_continue_stmt = 6
    RULE_terminal = 7
    RULE_declaration = 8
    RULE_access = 9
    RULE_pauli_op = 10
    RULE_ladder_op = 11
    RULE_operator_terminal = 12
    RULE_bool_literal = 13
    RULE_math_func = 14
    RULE_quantum_func = 15
    RULE_list_func = 16
    RULE_misc_func = 17
    RULE_func_names = 18
    RULE_args = 19
    RULE_func = 20
    RULE_analog_list = 21
    RULE_iexpr = 22
    RULE_complex = 23
    RULE_math_terminal = 24
    RULE_pexpr = 25
    RULE_eexpr = 26
    RULE_uexpr = 27
    RULE_mexpr = 28
    RULE_aexpr = 29
    RULE_cexpr = 30
    RULE_eqexpr = 31
    RULE_andexpr = 32
    RULE_xorexpr = 33
    RULE_orexpr = 34
    RULE_expr = 35

    ruleNames =  [ "program", "block", "statement", "ifelse_stmt", "while_stmt", 
                   "break_stmt", "continue_stmt", "terminal", "declaration", 
                   "access", "pauli_op", "ladder_op", "operator_terminal", 
                   "bool_literal", "math_func", "quantum_func", "list_func", 
                   "misc_func", "func_names", "args", "func", "analog_list", 
                   "iexpr", "complex", "math_terminal", "pexpr", "eexpr", 
                   "uexpr", "mexpr", "aexpr", "cexpr", "eqexpr", "andexpr", 
                   "xorexpr", "orexpr", "expr" ]

    EOF = Token.EOF
    WHITESPACE=1
    EOL=2
    NEWLINE=3
    COMMENT=4
    EVOLVE=5
    MEASURE=6
    INITIALIZE=7
    IF=8
    ELSE=9
    WHILE=10
    WITH=11
    FOR=12
    BREAK=13
    CONTINUE=14
    AND=15
    OR=16
    XOR=17
    NOT=18
    TRUE=19
    FALSE=20
    QUANTUMREGISTER=21
    MODEREGISTER=22
    COLON=23
    SEMICOLON=24
    COMMA=25
    LBRACKET=26
    RBRACKET=27
    SQUARELBRACKET=28
    SQUARERBRACKET=29
    LBRACE=30
    RBRACE=31
    MULT=32
    DIV=33
    PLUS=34
    MINUS=35
    POWER=36
    ASSIGN=37
    EQ=38
    NEQ=39
    LT=40
    LEQ=41
    GT=42
    GEQ=43
    AT=44
    INT=45
    FLOAT=46
    MATH_VAR=47
    REAL_PART=48
    IMAG_PART=49
    ABS=50
    SIN=51
    COS=52
    TAN=53
    EXP=54
    LOG=55
    SINH=56
    COSH=57
    TANH=58
    ATAN=59
    ACOS=60
    ASIN=61
    ATANH=62
    ASINH=63
    ACOSH=64
    HEAVISIDE=65
    CONJ=66
    REAL=67
    IMAG_FN=68
    ATAN2=69
    ROUND=70
    RANGE=71
    PRINT=72
    LENGTH=73
    FLATTEN=74
    PAULI_I=75
    PAULI_X=76
    PAULI_Y=77
    PAULI_Z=78
    CREATION=79
    ANNIHILATION=80
    IDENTITY_OP=81
    ID=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(AnalogParser.BlockContext,0)


        def EOF(self):
            return self.getToken(AnalogParser.EOF, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AnalogParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.block()
            self.state = 73
            self.match(AnalogParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnalogParser.StatementContext)
            else:
                return self.getTypedRuleContext(AnalogParser.StatementContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(AnalogParser.EOL)
            else:
                return self.getToken(AnalogParser.EOL, i)

        def getRuleIndex(self):
            return AnalogParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = AnalogParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [5, 6, 7, 8, 10, 13, 14, 18, 19, 20, 21, 22, 26, 28, 34, 35, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82]:
                        self.state = 75
                        self.statement()
                        self.state = 76
                        self.match(AnalogParser.EOL)
                        pass
                    elif token in [2]:
                        self.state = 78
                        self.match(AnalogParser.EOL)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & -35132488784416) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 524287) != 0):
                self.state = 84
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(AnalogParser.DeclarationContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(AnalogParser.While_stmtContext,0)


        def ifelse_stmt(self):
            return self.getTypedRuleContext(AnalogParser.Ifelse_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(AnalogParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(AnalogParser.Continue_stmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(AnalogParser.ExprContext,0)


        def getRuleIndex(self):
            return AnalogParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AnalogParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.while_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.ifelse_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.break_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.continue_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ifelse_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(AnalogParser.IF, 0)

        def LBRACKET(self):
            return self.getToken(AnalogParser.LBRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(AnalogParser.ExprContext,0)


        def RBRACKET(self):
            return self.getToken(AnalogParser.RBRACKET, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(AnalogParser.LBRACE)
            else:
                return self.getToken(AnalogParser.LBRACE, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnalogParser.BlockContext)
            else:
                return self.getTypedRuleContext(AnalogParser.BlockContext,i)


        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(AnalogParser.RBRACE)
            else:
                return self.getToken(AnalogParser.RBRACE, i)

        def ELSE(self):
            return self.getToken(AnalogParser.ELSE, 0)

        def EOL(self):
            return self.getToken(AnalogParser.EOL, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_ifelse_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfelse_stmt" ):
                listener.enterIfelse_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfelse_stmt" ):
                listener.exitIfelse_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelse_stmt" ):
                return visitor.visitIfelse_stmt(self)
            else:
                return visitor.visitChildren(self)




    def ifelse_stmt(self):

        localctx = AnalogParser.Ifelse_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifelse_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(AnalogParser.IF)
            self.state = 96
            self.match(AnalogParser.LBRACKET)
            self.state = 97
            self.expr()
            self.state = 98
            self.match(AnalogParser.RBRACKET)
            self.state = 99
            self.match(AnalogParser.LBRACE)
            self.state = 100
            self.block()
            self.state = 101
            self.match(AnalogParser.RBRACE)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 102
                    self.match(AnalogParser.EOL)


                self.state = 105
                self.match(AnalogParser.ELSE)
                self.state = 106
                self.match(AnalogParser.LBRACE)
                self.state = 107
                self.block()
                self.state = 108
                self.match(AnalogParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(AnalogParser.WHILE, 0)

        def LBRACKET(self):
            return self.getToken(AnalogParser.LBRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(AnalogParser.ExprContext,0)


        def RBRACKET(self):
            return self.getToken(AnalogParser.RBRACKET, 0)

        def LBRACE(self):
            return self.getToken(AnalogParser.LBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(AnalogParser.BlockContext,0)


        def RBRACE(self):
            return self.getToken(AnalogParser.RBRACE, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = AnalogParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(AnalogParser.WHILE)
            self.state = 113
            self.match(AnalogParser.LBRACKET)
            self.state = 114
            self.expr()
            self.state = 115
            self.match(AnalogParser.RBRACKET)
            self.state = 116
            self.match(AnalogParser.LBRACE)
            self.state = 117
            self.block()
            self.state = 118
            self.match(AnalogParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(AnalogParser.BREAK, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_break_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stmt" ):
                listener.enterBreak_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stmt" ):
                listener.exitBreak_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = AnalogParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(AnalogParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(AnalogParser.CONTINUE, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_continue_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinue_stmt" ):
                listener.enterContinue_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinue_stmt" ):
                listener.exitContinue_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_stmt" ):
                return visitor.visitContinue_stmt(self)
            else:
                return visitor.visitChildren(self)




    def continue_stmt(self):

        localctx = AnalogParser.Continue_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_continue_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(AnalogParser.CONTINUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator_terminal(self):
            return self.getTypedRuleContext(AnalogParser.Operator_terminalContext,0)


        def math_terminal(self):
            return self.getTypedRuleContext(AnalogParser.Math_terminalContext,0)


        def bool_literal(self):
            return self.getTypedRuleContext(AnalogParser.Bool_literalContext,0)


        def analog_list(self):
            return self.getTypedRuleContext(AnalogParser.Analog_listContext,0)


        def func(self):
            return self.getTypedRuleContext(AnalogParser.FuncContext,0)


        def getRuleIndex(self):
            return AnalogParser.RULE_terminal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminal" ):
                listener.enterTerminal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminal" ):
                listener.exitTerminal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminal" ):
                return visitor.visitTerminal(self)
            else:
                return visitor.visitChildren(self)




    def terminal(self):

        localctx = AnalogParser.TerminalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_terminal)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [75, 76, 77, 78, 79, 80, 81]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.operator_terminal()
                pass
            elif token in [26, 45, 46, 47, 48, 49, 82]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.math_terminal()
                pass
            elif token in [19, 20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.bool_literal()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.analog_list()
                pass
            elif token in [5, 6, 7, 21, 22, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74]:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.func()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AnalogParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AnalogParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AnalogParser.ExprContext,0)


        def getRuleIndex(self):
            return AnalogParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = AnalogParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(AnalogParser.ID)
            self.state = 132
            self.match(AnalogParser.ASSIGN)
            self.state = 133
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AnalogParser.ID, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_access

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess" ):
                listener.enterAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess" ):
                listener.exitAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccess" ):
                return visitor.visitAccess(self)
            else:
                return visitor.visitChildren(self)




    def access(self):

        localctx = AnalogParser.AccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_access)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(AnalogParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pauli_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAULI_I(self):
            return self.getToken(AnalogParser.PAULI_I, 0)

        def PAULI_X(self):
            return self.getToken(AnalogParser.PAULI_X, 0)

        def PAULI_Y(self):
            return self.getToken(AnalogParser.PAULI_Y, 0)

        def PAULI_Z(self):
            return self.getToken(AnalogParser.PAULI_Z, 0)

        def LBRACKET(self):
            return self.getToken(AnalogParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(AnalogParser.RBRACKET, 0)

        def args(self):
            return self.getTypedRuleContext(AnalogParser.ArgsContext,0)


        def getRuleIndex(self):
            return AnalogParser.RULE_pauli_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPauli_op" ):
                listener.enterPauli_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPauli_op" ):
                listener.exitPauli_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPauli_op" ):
                return visitor.visitPauli_op(self)
            else:
                return visitor.visitChildren(self)




    def pauli_op(self):

        localctx = AnalogParser.Pauli_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pauli_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not(((((_la - 75)) & ~0x3f) == 0 and ((1 << (_la - 75)) & 15) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 138
                self.match(AnalogParser.LBRACKET)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & -35132488810272) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 524287) != 0):
                    self.state = 139
                    self.args()


                self.state = 142
                self.match(AnalogParser.RBRACKET)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ladder_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATION(self):
            return self.getToken(AnalogParser.CREATION, 0)

        def ANNIHILATION(self):
            return self.getToken(AnalogParser.ANNIHILATION, 0)

        def IDENTITY_OP(self):
            return self.getToken(AnalogParser.IDENTITY_OP, 0)

        def getRuleIndex(self):
            return AnalogParser.RULE_ladder_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLadder_op" ):
                listener.enterLadder_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLadder_op" ):
                listener.exitLadder_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLadder_op" ):
                return visitor.visitLadder_op(self)
            else:
                return visitor.visitChildren(self)




    def ladder_op(self):

        localctx = AnalogParser.Ladder_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ladder_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not(((((_la - 79)) & ~0x3f) == 0 and ((1 << (_la - 79)) & 7) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Operator_terminalContext(ParserRuleContext):
        __slots__ = 'parser'
